--- a/info.yaml
+++ b/info.yaml
@@ -17,42 +17,43 @@ project:
   source_files: 
     - "project.v"     
     - "PAL.v"
-    - "STRIDE.v"
+    - "stride.v"
     - "crosspoint.v"
-    - "REDUCE.v"
-    - "SR.v"
+    - "reduce_and.v"
+    - "reduce_or.v"
+    - "sr.v"
 
 # The pinout of your project. Leave unused pins blank. DO NOT delete or add any pins.
 pinout:
   # Inputs
-  ui[0]: ""
-  ui[1]: ""
-  ui[2]: ""
-  ui[3]: ""
-  ui[4]: ""
-  ui[5]: ""
-  ui[6]: ""
-  ui[7]: ""
+  ui[0]: "Combinatorial input 0"
+  ui[1]: "Combinatorial input 1"
+  ui[2]: "Combinatorial input 2"
+  ui[3]: "Combinatorial input 3"
+  ui[4]: "Combinatorial input 4"
+  ui[5]: "Combinatorial input 5"
+  ui[6]: "Combinatorial input 6"
+  ui[7]: "Combinatorial input 7"
 
   # Outputs
-  uo[0]: ""
-  uo[1]: ""
-  uo[2]: ""
-  uo[3]: ""
-  uo[4]: ""
-  uo[5]: ""
-  uo[6]: ""
-  uo[7]: ""
+  uo[0]: "Combinatorial output 0"
+  uo[1]: "Combinatorial output 1"
+  uo[2]: "Combinatorial output 2"
+  uo[3]: "Combinatorial output 3"
+  uo[4]: "unused - tied to 0"
+  uo[5]: "unused - tied to 0"
+  uo[6]: "unused - tied to 0"
+  uo[7]: "unused - tied to 0"
 
   # Bidirectional pins
-  uio[0]: ""
-  uio[1]: ""
-  uio[2]: ""
-  uio[3]: ""
-  uio[4]: ""
-  uio[5]: ""
-  uio[6]: ""
-  uio[7]: ""
+  uio[0]: "Config pin: This pin is used to apply the config bit that will be shifted in on a rising clock edge."
+  uio[1]: "Enable pin: If HIGH (1) the result of the logic function is applied to all outputs."
+  uio[2]: "Clock pin: Used for the shift register to sample in the [config pin] data (see uio[0])."
+  uio[3]: "unused"
+  uio[4]: "unused"
+  uio[5]: "unused"
+  uio[6]: "unused"
+  uio[7]: "unused"
 
 # Do not change!
 yaml_version: 6
